--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
     </header>
     <section class="bg-main">
         <div class="max-w-6xl mx-auto px-4">
-            <div class="flex gap-16 py-20">
+            <div class="flex flex-col gap-16 py-20 md:flex-row">
                 <div class="text-gray flex flex-col gap-4 items-start basis-1/2">
                     <h1 class="text-5xl font-extrabold text-white">This website is 
                         <br>awesome</h1>
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                     <button class="bg-blue rounded px-6 py-2 text-white">Sign up</button>
                 </div>
-                <div class="bg-gray basis-1/2 flex justify-center items-center">this is a placeholder for an image</div>
+                <div class="bg-gray basis-1/2 flex justify-center items-center ">this is a placeholder for an image</div>
             </div>
         </div>
     </section>
     <section>
-        <div class="max-w-6xl mx-auto px-4">
-            <h2 class="font-extrabold text-4xl text-center my-10 text-dark">Some random information</h2>
+        <div class="max-w-6xl mx-auto px-4 py-20">
+            <h2 class="font-extrabold text-4xl text-center text-dark mb-10">Some random information</h2>
             <div class="flex flex-wrap justify-center gap-8">
                 <div><div class="w-48 h-48 border-blue border-2 rounded-xl"></div><p class="max-w-48 text-center">this is some subtext under an illustration or image</p></div>
                 <div><div class="w-48 h-48 border-blue border-2 rounded-xl"></div><p class="max-w-48 text-center">this is some subtext under an illustration or image</p></div>
@@ -43,5 +43,30 @@
             </div>
         </div>
     </section>
+    <section class="bg-gray py-40 px-4">
+        <div class="text-dark max-w-2xl mx-auto">
+            <blockquote>
+                <p class="italic font-light text-3xl">This is an inspiring quote, or a testimonial from a customer. 
+                Maybe it's just filling up space, or maybe people will actually read it. 
+                Who knows? All i know is that it looks nice.
+                </p>
+                <p class="text-right mt-4 font-bold text-2xl">
+                    -Thor, God of Thunder.
+                </p>
+            </blockqoute>
+        </div>
+    </section>
+    <section class="max-w-6xl mx-auto px-4 py-20">
+        <div class="bg-blue text-white px-4 py-16 rounded-xl flex justify-around">
+            <div>
+                <h2 class="font-bold">Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="border-2 border-white rounded-xl px-12">Sign up</button>
+        </div>
+    </section>
+    <footer class="bg-main flex justify-center items-center text-white py-10">
+        Copyright The Odin Project
+    </footer>
 </body>
 </html>
