--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <section class="bg-main">
         <div class="max-w-6xl mx-auto px-4">
             <div class="flex flex-col gap-16 py-20 md:flex-row">
-                <div class="text-gray flex flex-col gap-4 items-start basis-1/2">
+                <div class="text-gray flex flex-col gap-4 basis-1/2 text-center items-center md:text-left md:items-start">
                     <h1 class="text-5xl font-extrabold text-white">This website is 
                         <br>awesome</h1>
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                     <button class="bg-blue rounded px-6 py-2 text-white">Sign up</button>
                 </div>
-                <div class="bg-gray basis-1/2 flex justify-center items-center ">this is a placeholder for an image</div>
+                <div class="bg-gray basis-40 flex justify-center items-center md:basis-1/2">this is a placeholder for an image</div>
             </div>
         </div>
     </section>
@@ -57,12 +57,12 @@
         </div>
     </section>
     <section class="max-w-6xl mx-auto px-4 py-20">
-        <div class="bg-blue text-white px-4 py-16 rounded-xl flex justify-around">
+        <div class="bg-blue text-white px-4 py-16 rounded-xl flex flex-col items-center gap-8 justify-around text-center md:flex-row md:text-left">
             <div>
                 <h2 class="font-bold">Call to action! It's time!</h2>
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
-            <button class="border-2 border-white rounded-xl px-12">Sign up</button>
+            <button class="border-2 border-white rounded-xl px-12 py-4">Sign up</button>
         </div>
     </section>
     <footer class="bg-main flex justify-center items-center text-white py-10">
